--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -18,6 +18,6 @@
 	</servlet-mapping>
 	<context-param>
 		<param-name>primefaces.THEME</param-name>
-		<param-value>excite-bike</param-value>
+		<param-value>flick</param-value>
 	</context-param>
 </web-app>
